--- a/.bluish/bluish.yaml
+++ b/.bluish/bluish.yaml
@@ -1,11 +1,13 @@
-
 var:
   env_dir: .e_make
   public_dir: ./public
   server_port: 8000
+  # Set to true to cleanup the venv after building the site
+  cleanup_after_build: false
 
 jobs:
   _prepare:
+    name: Prepare venv
     steps:
       - run: |
           rm -rf "${{ public_dir }}"
@@ -18,6 +20,7 @@ jobs:
           fi
 
   site:
+    name: Build site
     depends_on:
       - _prepare
     steps:
@@ -25,6 +28,11 @@ jobs:
           . "${{ env_dir }}/bin/activate"
           python makesitex.py --output "${{ public_dir }}"
           cp -r ./static/* "${{ public_dir }}"
+
+      - name: Cleanup venv
+        if: env_dir && cleanup_after_build
+        run: |
+          rm -rf "${{ env_dir }}"
 
   serve:
     depends_on:
